# MangoWebServer

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  worklist.md
http/: httpconn.cpp  httpconn.h
include/: global.h  httpconn copy.h  httpconn.h  log.h  readme.md  signalhandler.h  threadpool.h  timer.h  utils.h  webserver.h
include/old/: oldlock.h_  oldthreadpool.h_
lock/: lock.h  readme.md
root/: index.html
src/: CMakeLists.txt  httpconn copy.old  httpconn.cpp  threadpool.cpp  timer.cpp  utils.cpp  webserver.cpp
src/old/: CMakeLists.txt  fsm.cpp_  mymf  test.cpp_
threadpool/: threadpool.h
